# skill-panel

./: .gitattributes  .gitignore  AGENTS.md  CURRENT-PLAN.md  DEVELOPMENT-LOG.md  PROJECT_STATE.md  README.md  RELEASE-READINESS.md  SOP-mindmap.md  SOP.md  delivery.md  index.html  package-lock.json  package.json  ui-style-guide.md  vite.config.ts
.github/workflows/: desktop-build.yml
docs/: README.md  final-review.md  migration-guide-v2.md  project-plan.md  skill-panel-product-bug-review.md  update-log.md  v3-qa-release.md  visual-qa-checklist.md
docs/architecture/: current.md
docs/archive/: README.md
docs/current/: README.md  architecture.md
docs/development-baselines/: ui-migration-checkpoint-2026-07-11.md
docs/modules/: README.md  ai-assistant-v3.8.1.md  app-shell-v3.8.1.md  create-preview-v3.8.1.md  dashboard-v3.8.1.md  editor-v3.8.1.md  i18n-legacy-workspace-v3.8.1.md  library-v3.8.1.md  logs-and-deps-v3.8.1.md  module-index-v3.8.1.md  packaging-scripts-v3.8.1.md  settings-v3.8.1.md  shared-ui-v3.8.1.md  skill-detail-v3.8.1.md  source-file-index-v3.8.1.md  state-hooks-v3.8.1.md  styles-system-v3.8.1.md  tauri-command-layer-v3.8.1.md  tauri-skill-data-v3.8.1.md  testing-qa-v3.8.1.md  types-contracts-v3.8.1.md
docs/plans/: 2026-07-18-repository-governance.md
docs/product/: PRD.md  UI-SPECIFICATION.md
output/: README.md
scripts/: create-migration-package.ps1  repo-doctor.mjs  repo-doctor.test.mjs  run-cargo-tests.mjs  run-cargo-tests.test.mjs  update-local-macos-app.sh  visual-qa.mjs
src/: App.editor.test.tsx  App.test.tsx  App.tsx  AppShell.test.tsx  AppShell.tsx  SkillPanelWorkspace.tsx  i18n.test.ts  main.tsx  packaging.config.test.ts  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_proxy.rs  call_logger.rs  commands.rs  dep_analyzer.rs  lib.rs  main.rs  models.rs  redaction.rs  settings_store.rs  skill_path_guard.rs  skill_scanner.rs  skill_store.rs  version_store.rs  watcher.rs
src-tauri/tests/: skill_contract.rs
src/lib/: ai.ts  (+9 more)
(+192 files in other folders)
