[package]
name = "skill-panel"
version = "3.2.0"
description = "Desktop shell for the Skill Panel application"
authors = ["Skill Panel Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "skill_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4"

[dev-dependencies]
tauri = { version = "2.8.5", features = ["test"] }
